--- a/templates/admin/employeeperstask.html
+++ b/templates/admin/employeeperstask.html
@@ -31,8 +31,7 @@
   </head>
   <body>
     <div class="container mt-4">
-      {% include 'admin/components/navbar.html' %}
-
+      {% include 'components/navbar.html' %}
       {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
           {% for category, message in messages %}
