--- a/templates/admin/homepage.html
+++ b/templates/admin/homepage.html
@@ -22,8 +22,7 @@
 </head>
 <body>
     <div class="container">
-        {% include 'admin/components/navbar.html' %}
-        <p class="text-center">Welcome, {{ fullname }}</p>
+        {% include 'components/navbar.html' %}        <p class="text-center">Welcome, {{ fullname }}</p>
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
