--- a/templates/admin/projects/projectdetails.html
+++ b/templates/admin/projects/projectdetails.html
@@ -19,16 +19,50 @@
         color: inherit;
         text-decoration: none;
     }
+    .status-label {
+        padding: 5px 10px;
+            border-radius: 5px;
+            color: #fff;
+            font-weight: bold;
+            text-align: center;
+            text-transform: uppercase;
+        }
+        .status-open {
+            background-color: #28a745;
+            color: white;
+        }
+        .status-upcoming {
+            background-color: #ffc107;
+            color: white;
+        }
+        .status-closed {
+            background-color: #dc3545;
+            color: white;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        {% include 'admin/components/navbar.html' %}
+        {% include 'components/navbar.html' %}        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} text-center mt-3" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <div class="card mt-4">
             <div class="card-body px-5">
-                <div class="row mt-4">
-                    <div class="col-md-12">
-                        <h2>{{ project.project_name }}</h2>
+                    <div class="row">
+                        <h2 class="col-auto card-title">{{ project.project_name }}</h2>
+                        <div class="col-4 mt-2">
+                           <div class="status-label {% if status == 'Open' %}status-open{% elif status == 'Upcoming' %}status-upcoming{% elif status == 'Closed' %}status-closed{% endif %}">
+                            {{ status }}
+                            </div> 
+                        </div>
+                    </div>        
+                        <div class="col-md-12">
                         <p><strong>Start Date:</strong> {{ project.start_date }}</p>
                         {% if project.end_date %}
                         <p><strong>End Date:</strong> {{ project.end_date }}</p>
@@ -40,14 +74,17 @@
                         <hr>
                         <h4>Teams</h4>
                         {% for team in team_details %}
-                            <h5>{{ team.team_name }}</h5>
+                        <div class="ml-2">
+                          <h5>{{ team.team_name }}</h5>
                             <p><strong>Supervisor:</strong><a href="{{ url_for('admin_routes.userdetails', Utoken=team.supervisor.Utoken) }}" class="list-group-item-action"> {{ team.supervisor.fulname }} </a></p>
                             
                             <p><strong>Members:</strong></p><ul>
                                 {% for member in team.members %}
                                     <li><a href="{{ url_for('admin_routes.userdetails', Utoken=member.Utoken) }}" class="list-group-item-action">{{ member.fullname }} </a></li>
                                 {% endfor %}
-                            </ul>
+                            </ul>  
+                        </div>
+                            
                         {% endfor %}
                         <hr>
                         <h4>Tasks</h4>
@@ -75,14 +112,29 @@
                                 {% endfor %}
                             </tbody>
                         </table>
-                        <div class="d-flex justify-content-between">
-                            <a href="{{ url_for('admin_routes.update_project', token=project.token) }}" class="btn btn-primary btn-sm">Update</a>
-                            <form action="{{ url_for('admin_routes.delete_project', project_id=project.project_id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this project?');">
+                        <div class="row mt-2">
+                            <a href="{{ url_for('admin_routes.update_project', token=project.token) }}" class=" ml-2 btn btn-primary btn-sm">Update</a>
+                            <form action="{{ url_for('admin_routes.delete_project', project_id=project.project_id) }}" class="ml-2" method="POST" onsubmit="return confirm('Are you sure you want to delete this project?');">
                                 <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                             </form>
+                            <div class="mr-2">
+                                <form  action="{{ url_for('admin_routes.update_project_statut') }}" method="POST" class="ml-2">
+                                    <input type="hidden" name="project_id" value="{{ project.project_id }}">
+                                    {% if status == 'Open' %}
+                                        <button type="submit" name="close" class="btn btn-sm btn-warning">Close Project</button>
+                                        {% elif status == 'Closed' or status == 'Upcoming' %}
+                                        <button type="submit" name="open" class="btn btn-sm btn-success">Open The project</button>
+                                    {% endif %}
+                                    
+                                </form>
+                                    
+                            </div>
+                            <div class="col-auto">
+                                <a class="btn btn-sm btn-primary" href="{{ url_for('admin_routes.addnewtask', project_token=project.token) }}">Create New task</a>
+                            </div>
                         </div>
                     </div>
-                </div>
+                
             </div>
         </div>
     </div>
