--- a/templates/admin/projects/update_project.html
+++ b/templates/admin/projects/update_project.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div class="container">
-        {% include 'admin/components/navbar.html' %}
+        {% include 'components/navbar.html' %}        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} text-center mt-3" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <h2>Update Project</h2>
         <form method="POST">
             <div class="form-group">
